# t42_autonomous_system

./: .gitignore  3d_markers.odt  imgui.ini
cl_control/: CMakeLists.txt  package.xml
cl_control/launch/: gp_control.launch
cl_control/results/: control_naive_goal-35.0_92.0_n17482_traj.pkl  control_track_cyl35_p0.pkl  control_track_poly10_p2_vid_20190626_195245740.pkl  control_track_str40_p4_vid_20190626_205840617.pkl
cl_control/src/: general_control.py  gp_controller.py  nn_controller.py  path_control.py  plot_obj_pos.py  run_control.py  run_plans.py  test_gp_control.py  vs_controller.py
cl_control/srv/: pathTrackReq.srv
collect_t42/: CMakeLists.txt  package.xml
collect_t42/launch/: collect.launch
collect_t42/src/: actor_record.py  collect_data.py  collect_test_paths.py  dataset_distribution.py  process_dataset.py  transition_experience.py  view_data.py
gpup_gp_node/: CMakeLists.txt  package.xml
gpup_gp_node/launch/: run.launch
gpup_gp_node/src/: covM.py  data_load.py  error_analysis.py  gp_transition.py  paper_gp_analysis.py  paper_gp_analysis_all.py  svm_class.py  test.py  var.py
gpup_gp_node/srv/: one_transition.srv  setKD.srv
gripper_nodes/launch/: model_t42_node.launch
gripper_nodes/src/: gripper.cpp  gripper_node.cpp
gripper_state_publisher/: CMakeLists.txt  package.xml
gripper_state_publisher/src/: gripper_state_publisher.cpp
hand_control/: CMakeLists.txt
hand_control/backup/: log.txt  naive_goal-24.0_65.0_n7809_plan.pkl  naive_goal-49.0_67.0_n8926_rollout.txt  robust_goal-25.0_65.0_n5273_plan.txt  robust_goal92.0_82.0_n3382_rollout.txt
hand_control/launch/: collect.launch  open.launch  run.launch
hand_control/msg/: plan_for_goal_request.msg
hand_control/param/: control_blue.yaml  control_o.yaml  control_red.yaml  gripper.yaml  model_o.yaml  model_t42_blue.yaml  model_t42_red.yaml
hand_control/plans/: critic1_goal-30.0_60.0_n58159_plan.txt  critic1_goal-30.0_60.0_n58159_traj.txt  critic_goal-20.0_80.0_n55646_plan.pkl  critic_goal-20.0_80.0_n55646_plan.txt  critic_goal-20.0_80.0_n55646_traj.txt  critic_goal-25.0_75.0_n98895_plan..pkl  critic_goal-25.0_75.0_n98895_plan.txt  critic_goal-25.0_75.0_n98895_traj.txt  critic_goal-30.0_60.0_n33397_plan.txt  critic_goal-30.0_60.0_n33397_traj.txt  critic_goal-30.0_60.0_n61981_plan.pkl  critic_goal-30.0_60.0_n61981_plan.txt  critic_goal-30.0_60.0_n61981_traj.txt  critic_goal-30.0_72.0_n53763_plan.txt  log.txt  (+122 more)
marker_tracker/: CMakeLists.txt  package.xml
marker_tracker/include/marker_tracker/: marker_generator.hpp  marker_tracker.hpp
marker_tracker/launch/: marker_tracker.launch
marker_tracker/markers/: markerObj.odt  markers.odt  markersBigger.odt
marker_tracker/msg/: ImageSpacePoseMsg.msg
marker_tracker/src/: main_marker_generator.cpp  main_marker_tracker.cpp  marker_generator.cpp  marker_tracker.cpp
marker_tracker/srv/: ImageSpacePoseSrv.srv
move_gripper/: CMakeLists.txt  package.xml
move_gripper/include/: move_gripper.hpp
move_gripper/src/: move_gripper.cpp  move_gripper_node.cpp
nn_node/: CMakeLists.txt  package.xml
nn_predict/: CMakeLists.txt  package.xml
object_state_publisher/: CMakeLists.txt  package.xml
openhand/: CMakeLists.txt
rollout_t42/: CMakeLists.txt  package.xml
(+371 files in other folders)
