<?xml version="1.0"?>
<package>
  <name>move_gripper</name>
  <version>1.0.0</version>
  <description>The move_gripper package</description>
  <maintainer email="yalegrablab@gmail.com">yalegrablab</maintainer>
  <license>AS IS</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>common_msgs_gl</build_depend>
  <build_depend>openhand</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>common_msgs_gl</run_depend>
  <run_depend>openhand</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
